Fix user box alignments
When boxes are different heights

--- a/_sass/pages/_user-list.scss
+++ b/_sass/pages/_user-list.scss
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
 
     @include bp-medium {
         flex-direction: row;
